[package]
name = "dll_needle"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dll_needle"
path = "src/lib.rs"

[dependencies]
log4rs = "1.1.1"
log = "*"
thiserror = "1.0.31"
[dependencies.winapi]
version = "0.3.9"
features=["winuser","memoryapi","errhandlingapi","tlhelp32","handleapi","processthreadsapi","synchapi","libloaderapi"]

[build-dependencies]
cc = "*"

[build]
target = "stable-i686-pc-windows-msvc"