[package]
name = "yeti_dll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mem-macros = {path="../../mem-rs/mem-macros"}
mem = {path="../../mem-rs/mem"}
windows = {version="0.39.0",features=["Win32_System_Console","Win32_UI_WindowsAndMessaging","Win32_Foundation","Win32_System_LibraryLoader","Win32_UI_Input_KeyboardAndMouse"]}
yeti_lib = {path="../yeti_lib/"}
ipmpsc = "0.5.1"
log = "*"
log4rs = "1.1.1"
thiserror = "1.0.31"
arc-swap = "1.5.0"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
cgmath = "0.18.0"
[lib]
crate-type = ["cdylib"]
