[package]
name = "yeti_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
hazedumper = {git="https://github.com/conner-replogle/hazedumper-rs-lib.git"}
serde_json = "1.0.48"
"chrono" = "*"
thiserror = "1.0.31"
glium = {git = "https://github.com/conner-replogle/glium-hittest.git"}
strum = "0.24.1"